@@ -1,6 +1,6 @@
 Openfire ![alt tag](https://raw.githubusercontent.com/igniterealtime/IgniteRealtime-Website/master/src/main/webapp/images/logo_openfire.gif)
 ========
-[![Build Status](https://travis-ci.org/igniterealtime/Openfire.svg?branch=master)](https://travis-ci.org/igniterealtime/Openfire)  [![Project Stats](https://www.openhub.net/p/Openfire/widgets/project_thin_badge.gif)](https://www.openhub.net/p/Openfire)
+[![Openfire CI](https://github.com/igniterealtime/Openfire/workflows/Openfire%20CI/badge.svg?branch=master)](https://github.com/igniterealtime/Openfire/actions?query=workflow%3A%22Openfire+CI%22+branch%3Amaster)  [![Project Stats](https://www.openhub.net/p/Openfire/widgets/project_thin_badge.gif)](https://www.openhub.net/p/Openfire)
 
 About
 -----
@@ -28,7 +28,7 @@ Resources
 
 - Documentation: http://www.igniterealtime.org/projects/openfire/documentation.jsp
 - Community: https://discourse.igniterealtime.org/c/openfire
-- Bug Tracker: http://issues.igniterealtime.org/browse/OF
+- Bug Tracker: https://igniterealtime.atlassian.net/browse/OF
 - Nightly Builds: http://www.igniterealtime.org/downloads/nightly_openfire.jsp
 
 Ignite Realtime
@@ -46,32 +46,56 @@ of the biggest and most active Open Source communities.
 Making changes
 ==============
 The project uses [Maven](https://maven.apache.org/) and as such should import straight in to your favourite Java IDE.
-The directory structure is fairly straightforward. The code is contained in two key folders:
+The directory structure is fairly straightforward. The main code is contained in:
 
 * `Openfire/xmppserver` - a Maven module representing the core code for Openfire itself
-* `Openfire/plugins` - a number of modules for the various [plugins](https://www.igniterealtime.org/projects/openfire/plugins.jsp) available
 
 Other folders are:  
 * `Openfire/build` - various files use to create installers for different platforms
 * `Openfire/distribution` - a Maven module used to bring all the parts together
 * `Openfire/documentation` - the documentation hosted at [igniterealtime.org](https://www.igniterealtime.org/projects/openfire/documentation.jsp)
 * `Openfire/i18n` - files used for internationalisation of the admin interface
+* `Openfire/plugins` - Maven configuration files to allow the various [plugins](https://www.igniterealtime.org/projects/openfire/plugins.jsp) available to be built
 * `Openfire/starter` - a small module that allows Openfire to start in a consistent manner on different platforms
 
 To build the complete project including plugins, run the command
 ```
-mvn verify
+./mvnw verify
 ```  
 
 However much of the time it is only necessary to make changes to the core XMPP server itself in which case the command
 ```
-mvn verify -pl distribution -am 
+./mvnw verify -pl distribution -am 
 ```  
 will compile the core server and any dependencies, and then assemble it in to something that can be run. 
 
 Testing your changes
 --------------------
-Although your IDE will happily compile the project unfortunately, it's not possible to run Openfire from within an 
+
+#### IntelliJ IDEA:
+
+1. Run -> Edit Configurations... -> Add Application
+2. fill in following values
+    1. Name: Openfire
+    2. Use classpath of module: starter
+    3. Main class: org.jivesoftware.openfire.starter.ServerStarter
+    4. VM options (adapt accordingly):
+        ````
+        -DopenfireHome="-absolute path to your project folder-\distribution\target\distribution-base" 
+        -Xverify:none
+        -server
+        -Dlog4j.configurationFile="-absolute path to your project folder-\distribution\target\distribution-base\lib\log4j2.xml"
+        -Dopenfire.lib.dir="-absolute path to your project folder-\distribution\target\distribution-base\lib"
+        -Dfile.encoding=UTF-8
+       ````
+   5. Working directory: -absolute path to your project folder-
+3. apply
+
+You need to execute `mvnw verify` before you can launch openfire.
+
+#### Other IDE's:
+
+Although your IDE will happily compile the project, unfortunately it's not possible to run Openfire from within the 
 IDE - it must be done at the command line. After building the project using Maven, simply run the shell script or 
 batch file to start Openfire;
 ```
@@ -84,11 +108,3 @@ or
 
 Adding `-debug` as the first parameter to the script will start the server in debug mode, and your IDE should be able
 to attach a remote debugger if necessary.
-
-Compiling a plugin
-------------------
-Compiling the complete project will build all the plugins - however to test changes to a plugin it's often quicker to 
-compile an individual plugin by specifing the `pom.xml` for that plugin, for example;
-```
-mvn verify -f plugins/broadcast/pom.xml
-```
